@@ -1,4 +1,9 @@
 2008-02-27 Raphael Ackermann <raphael.ackermann@gmail.com>
+	* src/Editors/_EditNote.py: empty_object() add extratype to object
+	0001476: Opening the new note dialog/editor and cancelling shouldn't ask 
+	to save changes. there are no changes 
+
+2008-02-27 Raphael Ackermann <raphael.ackermann@gmail.com>
 	* src/DbManager.py: rename glade variable to glade_xml_file
 
 2008-02-25 Frederik De Richter <frederik.de.richter@pandora.be>
